[package]
name = "filesculptor"
version = "0.4.0"
edition = "2024"
license = "GPL-3.0"
categories = ["command-line-utilities"]
keywords = ["command-line", "cli"]
readme = "README.md"
repository = "https://github.com/walker84837/filesculptor-rs"

[profile.dev]
debug = false

[profile.release]
strip = true
lto = true
overflow-checks = true
panic = "abort"

[dependencies]
serde_derive = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.5.1", features = ["derive"] }
log = "0.4.22"
simple_logger = { version = "5.0.0", features = ["timestamps"] }
regex = "1.10.6"
thiserror = "1.0.63"
tokio = { version = "1.44.2", features = ["full"] }
globset = "0.4.16"
futures-lite = "2.6.0"
async-walkdir = "2.1.0"
mlua = { version = "0.10.3", features = ["luajit", "vendored", "async", "send"] }
